--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -24,13 +24,13 @@
 </section>
 <!-- BoPrt1 Ends -->
 <!-- Match Details Starts -->
-<section class="matchDetails">
+<!--<section class="matchDetails">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="tabWrapper">
 
-          <!-- Nav tabs -->
+          &lt;!&ndash; Nav tabs &ndash;&gt;
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#nfl" aria-controls="nfl" role="tab" data-toggle="tab">NFL</a></li>
             <li role="presentation"><a href="#mlb" aria-controls="mlb" role="tab" data-toggle="tab">MLB</a></li>
@@ -40,7 +40,7 @@
             <li role="presentation"><a href="#mls" aria-controls="mls" role="tab" data-toggle="tab">MLS</a></li>
           </ul>
 
-          <!-- Tab panes -->
+          &lt;!&ndash; Tab panes &ndash;&gt;
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active" id="nfl">
               <div class="owl-carousel owl-theme matchDetailsSlider">
@@ -576,7 +576,7 @@
       </div>
     </div>
   </div>
-</section>
+</section>-->
 <!-- Match Details End -->
 <!-- News Details Starts -->
 <section class="newsDetails">
