--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -42,11 +42,11 @@
               <p class="otherSigninPara">You can also <a href="javascript:void(0)" class="lred">sign up here or</a> sign
                 in by:</p>
               <div class="loginSocialIcns">
-                <a href="javascript:void(0)"><img src="../../../../assets/images/login_twitter_icn.png" alt=""
+                <a href="javascript:void(0)"><img src="../../../../assets/images/facebook.png" alt=""
                                                   class="img-responsive"/></a>
-                <a href="javascript:void(0)"><img src="../../../../assets/images/login_google+_icn.png" alt=""
+                <a href="javascript:void(0)"><img src="../../../../assets/images/gmail.png" alt=""
                                                   class="img-responsive"/></a>
-                <a href="javascript:void(0)"><img src="../../../../assets/images/login_insta_icn.png" alt=""
+                <a href="javascript:void(0)"><img src="../../../../assets/images/twitter.png" alt=""
                                                   class="img-responsive"/></a>
               </div>
               <p class="regstrNmPara">Don’t you have an account? <a href="javascript:void(0)" class="lred">Register
