--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -162,12 +162,12 @@
                 <input type="button" value="Sign Up" class="formBtn" (click)="onBtnSignUpClicked()"
                        [disabled]="!signUpForm.valid || !tnc.checked">
               </form>
-              <pre>
+              <!--<pre>
               {{signUpForm.valid | json}}
               {{signUpForm.value | json}}
               {{signUpForm.errors | json}}
               {{signUpForm.get('email').errors | json}}
-            </pre>
+            </pre>-->
             </div>
           </div>
         </div>
