--- a/src/app/front/components/footer/front-footer.component.html
+++ b/src/app/front/components/footer/front-footer.component.html
@@ -11,13 +11,13 @@
             typesetting Ipsum is simply dummy text of the printing .</p>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1">
-          <h1 class="footerHdin">Links</h1>
+          <!--<h1 class="footerHdin">Links</h1>
           <ul class="footerLinks">
             <li><a href="#">Getting Started</a></li>
             <li><a href="#">Free Content</a></li>
             <li><a href="#">Member Content</a></li>
             <li><a href="#">Apparel</a></li>
-          </ul>
+          </ul>-->
         </div>
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
           <h1 class="footerHdin">Follow Us on :</h1>
