--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -5,14 +5,21 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 sidePad">
           <nav class="topNavbar">
             <ul class="pull-right">
-              <li><a href="#">Research Tool</a></li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/lineup-optimizer">Lineup Optimizer</a>
               </li>
-              <li><a href="#">Bankroll Management</a></li>
-              <li><a href="#">Forums</a></li>
-              <li><a href="#">Injury</a></li>
-              <li><a href="#">FAQ</a></li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/excel-tool">Excel Tool<span class="sr-only">(current)</span></a>
+              </li>
+              <li><a href="#">Extensions</a></li>
+              <li><a href="#">Contest Analyzer</a></li>
+              <li><a href="#">Injury Feeds</a></li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/basics">DFS Basics</a>
+              </li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+                <a routerLink="/faq">FAQ</a>
+              </li>
             </ul>
           </nav>
         </div>
